--- a/style.css
+++ b/style.css
@@ -2,5 +2,18 @@
 margin: 0;
 padding: 0;}
 
+/*Utils*/
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.d-flex {
+    display: flex;
+}
+
+/*Body*/
 
 body {background-color: aqua;}
+
