--- a/12bool.css
+++ b/12bool.css
@@ -6,6 +6,12 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+}               
+
+.row > [class^="col"] {
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: auto;
 }
 
 /*12Colonne*/
