--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@ padding: 0;}
     border: 1px solid rgb(251, 251, 251);
 }
 
+div [class^="col"] {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /*Utils*/
 
 .container {
