--- a/style.css
+++ b/style.css
@@ -2,25 +2,12 @@
 margin: 0;
 padding: 0;}
 
-/*Debug*/
-
-.row > [class^="col"] {
-    background-color: blue;
-    min-height: 100px;
-    border: 1px solid rgb(251, 251, 251);
-}
-
-div [class^="col"] {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 /*Utils*/
 
 .container {
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 20px auto;
+    color: white;
 }
 
 .d-flex {
@@ -29,5 +16,24 @@ div [class^="col"] {
 
 /*Body*/
 
+.row > [class^="col"] {
+    background-color: blue;
+    min-height: 100px;
+    border: 1px solid rgb(251, 251, 251);
+    padding: 10px;
+}
 
+.row > div [class^="col"] {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nested {
+background-color: chartreuse;
+border: 1px solid blue;
+display: flex;
+justify-content: center;
+align-items: center;
+color: black;}
 
