--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ padding: 0;}
 
 .row > [class^="col"] {
     background-color: blue;
-    min-height: 100px;
+    min-height: 50px;
     border: 1px solid rgb(251, 251, 251);
     padding: 10px;
 }
@@ -33,6 +33,7 @@ padding: 0;}
 background-color: chartreuse;
 border: 1px solid blue;
 display: flex;
+height: 100%;
 justify-content: center;
 align-items: center;
 color: black;}
