--- a/12bool.css
+++ b/12bool.css
@@ -19,8 +19,15 @@
 .d-flex {display: flex;}
 
 .justify-center {justify-content: center;}
+.justify-start {justify-content: flex-start;}
+.justify-end {justify-content: flex-end;}
+.justify-between {justify-content: space-between;}
+.justify-around {justify-content: space-around;}
+.justify-evenly {justify-content: space-evenly;}
 
 .align-center {align-items: center;}
+.align-start {align-items: flex-start;}
+.align-end {align-items: flex-end;}
 
 /*12Colonne*/
 
