--- a/style.css
+++ b/style.css
@@ -14,18 +14,20 @@ padding: 0;}
     display: flex;
 }
 
+.f-wrap {flex-wrap: wrap;}
+
+
 /*Body*/
 
 .row > [class^="col"] {
     background-color: blue;
-    min-height: 50px;
+    min-height: 80px;
     border: 1px solid rgb(251, 251, 251);
     padding: 10px;
 }
 
 .row > div[class^="col"] {
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
@@ -40,3 +42,12 @@ color: black;}
 
 h2 {margin: 20px 0;
 color: black;}
+
+h3 {margin: 20px 0;
+    color: black;}
+
+.col-6-sm {
+    flex-basis: calc( 100% / 12 * 6);
+    max-width: calc( 100% / 12 * 6);
+    min-height: 30px;
+}
