--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ padding: 0;}
 
 .f-wrap {flex-wrap: wrap;}
 
+.position-relative {
+    position: relative;
+}
+
 
 /*Body*/
 
@@ -23,10 +27,10 @@ padding: 0;}
     background-color: blue;
     height: 80px;
     border: 1px solid rgb(251, 251, 251);
-    padding: 10px;
+    padding: 10px 0px;
 }
 
-.row > div[class^="col"] {
+.row > [class^="col"] {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -50,6 +54,8 @@ h3 {margin: 20px 0;
 
 
     
-.row .col-6-sm{
+.row .col-6-small{
     height: 50%;
 }
+
+
